Revert "Merge branch 'dssc-8.0' of https://github.com/eulereadgbe/DSpace into dssc-8.0"
This reverts commit 3267644fc9cf6b4464f17f7f2dc5c86259539b29, reversing
changes made to 8cc4dd12bcb2e91a17c218435cb122ccfdad24d6.